--- a/Changes
+++ b/Changes
@@ -1,3 +1,9 @@
+== 0.2.3 (2010/07/21) ==
+
+ * Uses Web::Scraper.
+ * Removed Nstv.pm and package Nstv into nstv.
+ * Removed expire_cache in nstv.yaml.sample
+
 == 0.2.2 (2010/07/20) ==
 
  * Prefetch date.
